--- a/pipelines/create-ami.yml
+++ b/pipelines/create-ami.yml
@@ -45,6 +45,6 @@ pipelines:
             tasks:
               - exec: { command: terraform, arguments: [ "init" ],run_if: passed }
               - exec: { command: terraform, arguments: [ "state", "rm","aws_ami_from_instance.ami"],run_if: passed }
-              - exec: { command: terraform, arguments: [ "apply", "-auto-approve" ],run_if: passed }
+              - exec: { command: terraform, arguments: [ "destroy", "-auto-approve" ],run_if: passed }
 
 
